<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:textAlignment="center"
    android:visibility="visible"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="152dp"
        android:layout_height="139dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn_app"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/lo_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_user"
            android:layout_width="229dp"
            android:layout_height="match_parent"
            android:background="@color/color_finder"
            android:hint="@string/hint_name_user"
            android:padding="25px"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:text="@string/text_intro"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/login_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pass"
            android:layout_width="229dp"
            android:layout_height="match_parent"
            android:padding="25px"
            android:hint="@string/hint_name_password"
            android:textColorHint="@color/white"
            android:background="@color/color_finder"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_but"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:background="@drawable/round_but"
        app:layout_constraintBottom_toTopOf="@id/tv_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lo_pass"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:text="@string/login_but"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="179dp"
        android:layout_marginTop="40dp"
        android:text="@string/no_registred_yet"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_but" />

    <Button
        android:id="@+id/but_registro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_but"
        android:backgroundTint="@color/color_finder"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registro" />

</androidx.constraintlayout.widget.ConstraintLayout>