<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    tools:context=".results">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/user_icon"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_user_icon"
        android:scaleType="fitXY"
        android:src="@drawable/usericon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/home_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/user_icon"
        app:layout_constraintStart_toEndOf="@+id/user_icon" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="77dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_icon"
        app:srcCompat="@drawable/slim_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/logo">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_finder"
            android:hint="@string/filter_hint_search"
            android:padding="20px"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pelis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/logo"/>



</androidx.constraintlayout.widget.ConstraintLayout>