<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    tools:context=".createAcc">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="134dp"
        android:layout_height="122dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintBottom_toTopOf="@+id/txt_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/txt_sugest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Por favor completa los siguientes campos"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/lo_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sugest">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_user"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:background="@color/color_finder"
            android:hint="@string/hint_name_user"
            android:padding="10dp"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txt_intro"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="180dp"
        android:text="@string/create_intro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_sugest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:background="@color/color_finder"
            android:hint="Nombre"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_pass"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_finder"
            android:hint="@string/hint_name_password"
            android:padding="10dp"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_mail"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_finder"
            android:hint="correo"
            android:padding="10dp"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Crear cuenta"
        android:background="@drawable/round_but"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lo_pass"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>